--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "electron ."
   },
   "author": "Abigayle Franklin",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "electron": "^7.1.2"
+  }
 }
