--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron_todo",
+  "name": "ToDo",
   "version": "1.0.0",
   "description": "To Do Desktop App",
   "main": "main.js",
